[tool.poetry]
name = "line-sticker"
version = "0.1.0"
description = ""
authors = ["hsuan744172 <hsuan069317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apnggif = "^0.1.4"
bs4 = "^0.0.2"
requests = "^2.31.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
